# multipole_expansion

./: .gitignore  README.md  pyproject.toml  run_all_tests.sh  run_demo.py  run_demo.sh  run_demo.txt  test_higher_orders.py  test_numerical_validation.py  test_taylor_vs_Q.sh
multipole_expansion/: __init__.py  contraction.py  derivatives.py  multipole_moments.py  spherical_expansion.py  taylor_expansion.py  verification.py
report/: main.typ  multipole.typ  preamble.typ
